2014-10-10  Glenn Morris  <rgm@gnu.org>

	* info.el (Info-fontify-maximum-menu-size): Bump to 400k.  (Bug#16227)
	Fix :type.  Allow t to mean no limit.
	(Info-fontify-node): Handle Info-fontify-maximum-menu-size = t.

2014-10-09  Glenn Morris  <rgm@gnu.org>

	* frame.el (display-monitor-attributes-list): Doc tweaks.

2014-10-09  Eli Zaretskii  <eliz@gnu.org>

	* faces.el (display-grayscale-p): Mention in the doc string that
	the argument can be either a display name or a frame.

	* frame.el (display-pixel-height, display-pixel-width)
	(display-mm-height, display-mm-width, display-backing-store)
	(display-save-under, display-planes, display-color-cells)
	(display-visual-class, display-monitor-attributes-list)
	(display-screens): Mention in the doc string that the argument can
	be either a display name or a frame.  Improve the docs of the
	monitor attributes.  (Bug#18636)

2014-10-09  Martin Rudalics  <rudalics@gmx.at>

	* term.el (term-window-width): Subtract 1 from the width when
	any fringe has zero width, not just the right fringe.  (Bug#18601)

2014-10-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* frame.el (make-frame): Use t rather than nil for `w' (bug#18653).

2014-10-08  Leo Liu  <sdl.web@gmail.com>

	* emacs-lisp/cl-extra.el (cl-fresh-line): New function.

2014-10-08  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-x.el (calendar-dedicate-diary):
	Drop support for recently deleted aliases.

2014-10-08  Leo Liu  <sdl.web@gmail.com>

	* progmodes/cfengine.el (cfengine3-make-syntax-cache):
	Always return a syntax.  Replace call-process-shell-command with
	process-file.  Ensure cfengine-mode-syntax-functions-regex is
	always set.  Ensure cache when cfengine-cf-promises fails.
	(Bug#18620)

2014-10-07  Glenn Morris  <rgm@gnu.org>

	* font-lock.el (font-lock-fontify-buffer): Fix interactive-only markup.

2014-10-07  Wilson Snyder  <wsnyder@wsnyder.org>

	Sync with upstream verilog-mode revision c075a492.